@@ -1,3 +1,9 @@
+2011-09-29  Alan Modra  <amodra@gmail.com>
+
+	PR ld/13233
+	* elflink.c (_bfd_elf_gc_mark_extra_sections): Mark single member
+	debug and special section groups.
+
 2011-09-26  Tristan Gingold  <gingold@adacore.com>
 
 	* configure.in: Bump version to 2.21.90
